kubernetes/eks_3_ingress_nginx/part2_app/template-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes
  annotations:
    # use nginx-ingress (needed if 2+ ingress controllers)
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    # route by virtualhost - externaldns registers this record
  - host: $MY_DNS_NAME
    http:
      paths:
      - backend:
          serviceName: hello-kubernetes
          # connect to service using http port
          servicePort: 80
        # default path put here explicitly for illustrative purposes
        path: /
